Add new landing, add work page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<img src="omnirubus.png" width="100">
+---
+layout: default
+title: Home
+---
+<div class="space-y-4 max-w-xl text-xl leading-relaxed">
+    <h1 class="text-3xl font-medium text-gray-800">Hey, I'm Jan</h1>
+    <p>
+        I am a software engineer specializing in native mobile apps and full-stack web platforms. I am currently building <a class="text-green-900 hover:opacity-50 font-bold" href="https://www.raiseroom.com">RaiseRoom</a> and a <span class="text-pink-500 font-bold">super secret project</span>, plus an occasional contracting project.
+    </p>
+    <p>
+        Check out some of my <a class="font-bold text-gray-700 hover:opacity-50" href="work.html">work</a> or <a class="font-bold text-gray-700 hover:opacity-50" href="contact.html">contact me</a>.
+    </p>
+</div>
