Update page titles, replace email

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Home
+title: Omnirubus
 ---
 <div class="space-y-4 max-w-xl text-xl leading-relaxed">
     <h1 class="text-3xl font-medium text-gray-800">Hey, I'm Jan</h1>
