--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Home
+title: Contact
 ---
 <div class="space-y-4 max-w-xl text-xl leading-relaxed">
     <h1 class="text-3xl font-medium text-gray-800">Contact</h1>
     <p>
-        Send me an <a class="font-bold text-gray-700 hover:opacity-50" href="mailto:info@jannemecek.com">email</a> or <a class="font-bold text-gray-700 hover:opacity-50" href="https://www.linkedin.com/in/jann1/">connect</a> on LinkedIn.
+        Send me an <a class="font-bold text-gray-700 hover:opacity-50" href="mailto:jan@omnirubus.com">email</a> or <a class="font-bold text-gray-700 hover:opacity-50" href="https://www.linkedin.com/in/jann1/">connect</a> with me on LinkedIn.
     </p>
 </div>
