--- a/work.html
+++ b/work.html
@@ -7,6 +7,11 @@ title: Work
     
     <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-10">
         {% include project.html 
+        link="https://appcargo.com"
+        image="cargo.jpg"
+        title="Car:Go" 
+        content="Car:Go is a leading ride-sharing and food delivery service in Belgrade." %}
+        {% include project.html 
         link="https://www.raiseroom.com"
         image="raiseroom.png"
         title="RaiseRoom" 
@@ -15,12 +20,7 @@ title: Work
         link="https://www.voiceinsport.com"
         image="vis.png"
         title="Voice in Sport" 
-        content="Voice in Sport is a community that connects female athletes through a members-only platform providing access to original content, a digital mentorship program, and access to experts in Sports Psychology, Sports Nutrition, and Women's Health." %}
-        {% include project.html 
-        link="https://www.appcargo.com"
-        image="cargo.jpg"
-        title="Car:Go" 
-        content="A ride-sharing and food delivery service in Belgrade." %}
+        content="Voice in Sport is a community that connects female athletes through a members-only platform providing access to original content, a digital mentorship program, and access to experts." %}
         {% include project.html 
         link="https://apps.apple.com/be/app/tik-konnect/id1534694416"
         image="tik.png"
