--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@ title: Omnirubus
 <div class="space-y-4 max-w-xl text-xl leading-relaxed">
     <h1 class="text-3xl font-medium text-gray-800">Hey, I'm Jan</h1>
     <p>
-        I am a software engineer specializing in native mobile apps and full-stack web platforms. I am currently building <a class="text-green-900 hover:opacity-50 font-bold" href="https://www.raiseroom.com">RaiseRoom</a> and a <span class="text-pink-500 font-bold">super secret project</span>, plus an occasional contracting project.
+        I am a product-minded software engineer specializing in native mobile apps and full-stack web platforms. 
+        Currently, I'm working full-time at <a class="text-green-400 hover:opacity-50 font-bold" href="https://appcargo.com">Car:Go</a>, 
+        while occasionally iterating on a <span class="text-pink-500 font-bold">super-secret</span> project.
     </p>
     <p>
-        Check out some of my <a class="font-bold text-gray-700 hover:opacity-50" href="work.html">work</a> or <a class="font-bold text-gray-700 hover:opacity-50" href="contact.html">contact me</a>.
+        Check out some of my <a class="font-bold text-gray-700 hover:opacity-50" href="work.html">work</a> 
+        or <a class="font-bold text-gray-700 hover:opacity-50" href="contact.html">contact me</a>.
     </p>
 </div>
