--- a/work.html
+++ b/work.html
@@ -7,29 +7,40 @@ title: Work
     
     <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-10">
         {% include project.html 
+        link="https://misterd.rs"
+        image="mrd.webp"
+        title="Mr. D" 
+        tech="Mobile"
+        content="Mr. D is an upcoming food delivery service operating in several Serbian cities and coming soon to other countries in the region." %}
+        {% include project.html 
         link="https://appcargo.com"
-        image="cargo.jpg"
+        image="cargo.png"
         title="Car:Go" 
+        tech="Mobile"
         content="Car:Go is a leading ride-sharing and food delivery service in Belgrade." %}
         {% include project.html 
         link="https://www.raiseroom.com"
         image="raiseroom.png"
         title="RaiseRoom" 
+        tech="Backend,Frontend"
         content="RaiseRoom makes your fundraising process more efficient so you can close faster and grow your company." %}
         {% include project.html 
         link="https://www.voiceinsport.com"
         image="vis.png"
         title="Voice in Sport" 
+        tech="Backend,Frontend"
         content="Voice in Sport is a community that connects female athletes through a members-only platform providing access to original content, a digital mentorship program, and access to experts." %}
         {% include project.html 
         link="https://apps.apple.com/be/app/tik-konnect/id1534694416"
         image="tik.png"
         title="TikKonnect" 
+        tech="Backend,Mobile"
         content="A platform for you to be vulnerable in sharing your experiences dealing with mental health, sharing your outlook and skills with others, and lending a helping hand." %}
         {% include project.html 
         link="https://apps.apple.com/us/app/find-bridge/id1251328685"
         image="bridge.webp"
         title="Bridge" 
+        tech="Mobile"
         content="Bridge lets you easily track all your Gives and Asks in one place. Use Bridge for the things you can't find online, like introductions, trusted advice, verified tips from locals." %}
     </div>
     
