--- a/work.html
+++ b/work.html
@@ -7,17 +7,23 @@ title: Work
     
     <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-10">
         {% include project.html 
+        link="https://lockwell.co"
+        image="lockwell.png"
+        title="Lockwell" 
+        tech="Backend,Frontend,Desktop"
+        content="Lockwell is a cybersecurity platform founded in 2022, offering small businesses an all-in-one app that consolidates solutions like a password manager, enhanced network security, advanced anti-malware protection, and an automated security operations center." %}
+        {% include project.html 
         link="https://misterd.rs"
         image="mrd.webp"
         title="Mr. D" 
         tech="Mobile"
-        content="Mr. D is an upcoming food delivery service operating in several Serbian cities and coming soon to other countries in the region." %}
+        content="Mr. D is a food and grocery delivery service in Serbia, offering fast, convenient ordering from local restaurants and supermarkets through its mobile app and website." %}
         {% include project.html 
         link="https://appcargo.com"
         image="cargo.png"
         title="Car:Go" 
         tech="Mobile"
-        content="Car:Go is a leading ride-sharing and food delivery service in Belgrade." %}
+        content="CarGo is a leading ride-sharing app in Belgrade, offering convenient and cashless transportation services through its mobile platform." %}
         {% include project.html 
         link="https://www.raiseroom.com"
         image="raiseroom.png"
