--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@ title: Work
         image="lockwell.png"
         title="Lockwell" 
         tech="Backend,Frontend,Desktop"
-        content="Lockwell is a cybersecurity platform founded in 2022, offering small businesses an all-in-one app that consolidates solutions like a password manager, enhanced network security, advanced anti-malware protection, and an automated security operations center." %}
+        content="Lockwell is a cybersecurity platform offering small businesses an all-in-one app that consolidates solutions like a password manager, enhanced network security, advanced anti-malware protection, and an automated security operations center." %}
         {% include project.html 
         link="https://misterd.rs"
         image="mrd.webp"
