--- a/work.html
+++ b/work.html
@@ -7,6 +7,12 @@ title: Work
     
     <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-10">
         {% include project.html 
+        link="https://playmemery.com"
+        image="memery.webp"
+        title="memery" 
+        tech="Backend,Mobile"
+        content="It’s like if the fun new meme game you didn’t know you were waiting for met the fastest way to make and share memes and had a baby." %}
+        {% include project.html 
         link="https://lockwell.co"
         image="lockwell.png"
         title="Lockwell" 
