--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ title: Omnirubus
     <h1 class="text-3xl font-medium text-gray-800">Hey, I'm Jan</h1>
     <p>
         I am a product-minded software engineer specializing in native mobile apps and full-stack web platforms. 
-        Currently, I'm working at <a class="text-green-400 hover:opacity-50 font-bold" href="https://wtech.rs" target="_blank">W-Tech</a>, 
-        while building <a class="text-pink-500 font-bold" href="https://playmemery.com" target="_blank">memery</a> in my spare time.
+        Currently, I'm working on <a class="text-pink-500 font-bold" href="https://playmemery.com" target="_blank">memery</a> in my spare time.
     </p>
     <p>
         Check out some of my <a class="font-bold text-gray-700 hover:opacity-50" href="work.html">work</a> 
